Remove unused methods and constants, and improve JavaDoc formatting
- Removed unused `getName_en` and `getDescription_en` methods from `Meal.java` to streamline the DTO.
- Eliminated an unused constant `DAILY_MENU_URL` in `JidloviceMenuClient` to clean up the codebase.
- Enhanced JavaDoc formatting in `RestTemplateConfig` and `ClockConfig` for better readability and consistency.